--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "chalk": "^5.4.1",
     "debug": "^4.4.0",
     "express": "^4.21.2",
+    "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
     "node.js": "^0.0.1-security"
   },
