--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "chalk": "^5.4.1",
     "debug": "^4.4.0",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
