--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "debug": "^4.4.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
     "node.js": "^0.0.1-security"
